force-app/main/default/objects/Item_Sales_Tax__c/Item_Sales_Tax__c.object-meta.xml
<CustomObject>
    <label>Item Sales Tax</label>
    <nameField>
        <label>Item Sales Tax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Sales Taxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>