force-app/main/default/objects/Item_Sales_Tax__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>