force-app/main/default/objects/Item_Sales_Tax__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>