force-app/main/default/objects/Item_Sales_Tax__c/fields/Vendor_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_External_Id__c</fullName>
    <label>Vendor External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>